[package]
name = "data-filter"
version = "0.1.0"
authors = ["aymeric.nunge@gmail.com"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
kmeans = "0.2.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
structopt = { version = "0.3", default-features = false }

[profile.dev]
opt-level = 0
