[package]
name = "midi-parse"
version = "0.1.0"
authors = ["matthieu gayon <matthieu.gayon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = { git = "https://github.com/negamartin/midly" }
itertools = "0.9.0"
time_calc = "0.13.0"
ndarray = "0.13.1"
drawille = { git = "git://github.com/P1start/drawille-rs" }